--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /todo/php/FranciscoFolguera_CRUDAlumnos/nbproject/private/
 /todo/php/EntradaDatos/nbproject/private/
+/todo/php/FrancisoFolguera_RegistrodeUsuario/nbproject/private/
+/todo/php/RegistrodeUsuario/nbproject/private/
+/todo/php/Captcha/nbproject/private/
+/todo/php/FranciscoFolguera_captcha/nbproject/private/
