--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /todo/php/RegistrodeUsuario/nbproject/private/
 /todo/php/Captcha/nbproject/private/
 /todo/php/FranciscoFolguera_captcha/nbproject/private/
+/todo/Examen2Eva/nbproject/private/
+/todo/php/ExamenRecuperacion/nbproject/private/
+/todo/php/Modelo_Examen/nbproject/private/
