--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /todo/Examen2Eva/nbproject/private/
 /todo/php/ExamenRecuperacion/nbproject/private/
 /todo/php/Modelo_Examen/nbproject/private/
+/GmailNet/nbproject/private/
